--- a/src/shared/table/table.component.html
+++ b/src/shared/table/table.component.html
@@ -1,27 +1,29 @@
-
-
-<h3>Table Data</h3>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Status</th>
-      <th>Email</th>
-      <th>No HP</th>
-      <th>Is RO</th>
-      <th>Income</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let customer of recieverDataFromInput">
-      <td>{{ customer.name }}</td> 
+<div class="home-container">
+  <h3>Table Data</h3>
+  <share-button></share-button>
+  <!-- <share-input-customer (click-event)="handleInput($event)"></share-input-customer> -->
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Status</th>
+        <th>Email</th>
+        <th>No HP</th>
+        <th>Is RO</th>
+        <th>Income</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let customer of recieverDataFromInput">
+        <td>{{ customer.name }}</td> 
         <td>{{ customer.address }}</td>
-      <td>{{ customer.status }}</td>
-      <td>{{ customer.email }}</td>
-      <td>{{ customer.noHp }}</td>
-      <td>{{ customer.isRo }}</td>
-      <td>{{ customer.income }}</td>
-    </tr>
-  </tbody>
-</table>
+        <td>{{ customer.status }}</td>
+        <td>{{ customer.email }}</td>
+        <td>{{ customer.noHp }}</td>
+        <td>{{ customer.isRo }}</td>
+        <td>{{ customer.income | currency:'Rp '}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
