--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <ng-container>
-  <shared-table></shared-table>
+  <!-- <share-button></share-button> -->
 </ng-container>
+
+<router-outlet></router-outlet>
