fixed: table-formdetail

--- a/src/shared/input-customer/input-customer.component.html
+++ b/src/shared/input-customer/input-customer.component.html
@@ -18,10 +18,10 @@
     </div>
 
     <!-- Status -->
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label for="status">Status</label>
-      <input type="text" id="status" formControlName="status" />
-    </div>
+      <input type="text" id="status" formControlName="status" disabled=""/>
+    </div> -->
 
     <!-- Email -->
     <div class="form-group">
