--- a/src/shared/input-customer/input-customer.component.html
+++ b/src/shared/input-customer/input-customer.component.html
@@ -31,8 +31,8 @@
 
     <!-- Phone -->
     <div class="form-group">
-      <label for="noHp">Phone</label>
-      <input type="text" id="noHp" formControlName="noHp" />
+      <label for="phone">Phone</label>
+      <input type="text" id="phone" formControlName="phone" />
     </div>
 
     <!-- Income -->
