--- a/src/shared/table/table.component.scss
+++ b/src/shared/table/table.component.scss
@@ -114,4 +114,12 @@
       }
     }
   }
+
+  .near-due {
+    background-color: yellow; /* kuning muda */
+  }
+
+  .over-due {
+    background-color: red; /* merah muda */
+  }
 }
