--- a/src/shared/input-login/input-login.component.html
+++ b/src/shared/input-login/input-login.component.html
@@ -30,6 +30,11 @@
     <div *ngIf="errorMessage" style="color: red; margin-top: 10px;">
         {{ errorMessage }}
     </div>
+            <div class="credentials-box" style="margin-top: 20px; padding: 10px; border: 1px solid #ccc; background: #f9f9f9;">
+            <h4>Test Credentials</h4>
+            <p><strong>Email:</strong> eve.holt&#64;reqres.in</p>
+            <p><strong>Password:</strong> cityslicka</p>
+    </div>
     </div>
 
 </div>
